// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Alert Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <div
      class="sc-gKsewC cgpPfo sc-iBPRYJ ipiHMM sc-hHftDr sc-dmlrTW cLDXoV cbtefT sc-lmoMRL cGXAYQ"
    >
      <div
        class="sc-fKFyDc jHCVxA sc-bBXqnf ebpqPX"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-check-circle fa-w-16 "
          data-icon="check-circle"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="sc-gKsewC dWcnb sc-iBPRYJ jyModB"
      >
        <span
          class="sc-fKFyDc euqOvB sc-iwyYcG hQqijh"
        >
          Success!
        </span>
        <span
          class="sc-fKFyDc jHCVxA sc-iwyYcG bUoHum"
        >
          This is a default alert
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Alert Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <div
      class="sc-gKsewC cgpPfo sc-iBPRYJ dQsSLq sc-hHftDr sc-dmlrTW cLDXoV hjYAKL sc-lmoMRL cGXAYQ"
    >
      <div
        class="sc-fKFyDc jHCVxA sc-bBXqnf XVwEh"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-lightbulb fa-w-11 "
          data-icon="lightbulb"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 352 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M96.06 454.35c.01 6.29 1.87 12.45 5.36 17.69l17.09 25.69a31.99 31.99 0 0 0 26.64 14.28h61.71a31.99 31.99 0 0 0 26.64-14.28l17.09-25.69a31.989 31.989 0 0 0 5.36-17.69l.04-38.35H96.01l.05 38.35zM0 176c0 44.37 16.45 84.85 43.56 115.78 16.52 18.85 42.36 58.23 52.21 91.45.04.26.07.52.11.78h160.24c.04-.26.07-.51.11-.78 9.85-33.22 35.69-72.6 52.21-91.45C335.55 260.85 352 220.37 352 176 352 78.61 272.91-.3 175.45 0 73.44.31 0 82.97 0 176zm176-80c-44.11 0-80 35.89-80 80 0 8.84-7.16 16-16 16s-16-7.16-16-16c0-61.76 50.24-112 112-112 8.84 0 16 7.16 16 16s-7.16 16-16 16z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="sc-gKsewC dWcnb sc-iBPRYJ fLUuUH"
      >
        <span
          class="sc-fKFyDc euqOvB sc-iwyYcG hQqijh"
        >
          Note!
        </span>
        <span
          class="sc-fKFyDc jHCVxA sc-iwyYcG cRxeiz"
        >
          This is an emphasized alert
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Alert Plaintext 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <div
      class="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr cLDXoV sc-lmoMRL cGXAYQ"
    >
      <div
        class="sc-fKFyDc jHCVxA sc-bBXqnf XVwEh"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-lightbulb fa-w-11 "
          data-icon="lightbulb"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 352 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M96.06 454.35c.01 6.29 1.87 12.45 5.36 17.69l17.09 25.69a31.99 31.99 0 0 0 26.64 14.28h61.71a31.99 31.99 0 0 0 26.64-14.28l17.09-25.69a31.989 31.989 0 0 0 5.36-17.69l.04-38.35H96.01l.05 38.35zM0 176c0 44.37 16.45 84.85 43.56 115.78 16.52 18.85 42.36 58.23 52.21 91.45.04.26.07.52.11.78h160.24c.04-.26.07-.51.11-.78 9.85-33.22 35.69-72.6 52.21-91.45C335.55 260.85 352 220.37 352 176 352 78.61 272.91-.3 175.45 0 73.44.31 0 82.97 0 176zm176-80c-44.11 0-80 35.89-80 80 0 8.84-7.16 16-16 16s-16-7.16-16-16c0-61.76 50.24-112 112-112 8.84 0 16 7.16 16 16s-7.16 16-16 16z"
            fill="currentColor"
          />
        </svg>
      </div>
      <span
        class="sc-fKFyDc jHCVxA sc-iwyYcG cRxeiz"
      >
        This is a plaintext alert
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Alert With Link 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <div
      class="sc-gKsewC cgpPfo sc-iBPRYJ ipiHMM sc-hHftDr sc-dmlrTW cLDXoV cbtefT sc-lmoMRL cGXAYQ"
    >
      <div
        class="sc-fKFyDc jHCVxA sc-bBXqnf ebpqPX"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-check-circle fa-w-16 "
          data-icon="check-circle"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="sc-gKsewC dWcnb sc-iBPRYJ jyModB"
      >
        <span
          class="sc-fKFyDc euqOvB sc-iwyYcG hQqijh"
        >
          Success!
        </span>
        <span
          class="sc-fKFyDc jHCVxA sc-iwyYcG bUoHum"
        >
          With a 
          <a
            class="sc-bXDlPE lhITcI sc-eGCarw CequI"
            color="primary.main"
            href="test"
          >
            link
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Alert Without Dismiss 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <div
      class="sc-gKsewC cgpPfo sc-iBPRYJ ipiHMM sc-hHftDr sc-dmlrTW cLDXoV cbtefT sc-lmoMRL cGXAYQ"
    >
      <div
        class="sc-fKFyDc jHCVxA sc-bBXqnf ebpqPX"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-check-circle fa-w-16 "
          data-icon="check-circle"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="sc-gKsewC dWcnb sc-iBPRYJ jyModB"
      >
        <span
          class="sc-fKFyDc euqOvB sc-iwyYcG hQqijh"
        >
          Success!
        </span>
        <span
          class="sc-fKFyDc jHCVxA sc-iwyYcG bUoHum"
        >
          Without a dismiss button
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Alert Without Prefix 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <div
      class="sc-gKsewC cgpPfo sc-iBPRYJ ipiHMM sc-hHftDr sc-dmlrTW cLDXoV cbtefT sc-lmoMRL cGXAYQ"
    >
      <div
        class="sc-fKFyDc jHCVxA sc-bBXqnf ebpqPX"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-check-circle fa-w-16 "
          data-icon="check-circle"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="sc-gKsewC dWcnb sc-iBPRYJ jyModB"
      >
        <span
          class="sc-fKFyDc euqOvB sc-iwyYcG hQqijh"
        >
          Success!
        </span>
        <span
          class="sc-fKFyDc jHCVxA sc-iwyYcG bUoHum"
        >
          Without a prefix
        </span>
      </div>
    </div>
  </div>
</div>
`;
